--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "framer-motion": "^11.0.5",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
