--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "critters": "^0.0.23",
+    "framer-motion": "^11.0.5",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "xlsx": "^0.18.5",
-    "framer-motion": "^11.0.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
